fixed spacing for galaxy foldd

--- a/src/team/team.css
+++ b/src/team/team.css
@@ -227,24 +227,23 @@ h2.team-heading{
         flex-direction: column;
     }
     
-    .team-heading, .subcom_row {
-        width: 98%;
+    .team-heading, .subcom_section, .subcom_type {
+        width: 90%;
         margin: 0 auto;
-        padding: 10px;
     }
 
     .subcom_row {
-        display: grid;
-        grid-template-columns: 1fr 2fr;
-        grid-column-gap: 10px;
+        display: inline-grid;
+        width: 100%;
+        grid-template-columns: 90px auto;
+        grid-gap: 15px;
         align-content: start;
     }
-    .subcom_col {
-        min-width: 100px;
-    }
 
+    
     .subcom_profile_degree {
         overflow-wrap: break-word;
+        word-break: break-word;
         hyphens: auto;
     }
 }
